--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@
     background-repeat: no-repeat;
 }
 .about-img-clouds{
-    background-image: url(../images/circle.png);
+    background-image: url(../images/Circle.png);
     height: 102px;
     background-position: center;
     background-repeat: no-repeat;
