--- a/css/style.css
+++ b/css/style.css
@@ -421,6 +421,12 @@
     padding-bottom: 5px;
 }
 
+@media (max-width:991px){
+    
+.portfolio1-position{
+    margin-top:2rem;
+    }
+}
 
 @media only screen and (max-width:576px ){
 
@@ -440,7 +446,7 @@
         width: 55%;
     }
     .portfolio1-position{
-        margin-top: 20px;
+        margin-top: 2rem;
         width: 80%;
         margin: auto;
     }
